support-frontend/assets/pages/digital-subscription-landing/components/digitalSubscriptionLanding.scss
@import '~stylesheets/gu-sass/gu-sass';

.component-product-page-hero {
  box-sizing: border-box;
  & * {
    box-sizing: border-box;
  }
}

.hope-is-power-hero--wrapper {
  position: relative;
  z-index: 5;
  background: #ededed;
  
  &:before {
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 90px;
		background: #fff;
		border-bottom: 1px solid gu-colour(neutral-86);
		content: '';
	}

	@include mq($from: phablet, $until: desktop) {
		&:before {
			height: 80px;
		}
	}

  @include mq($from: tablet) {
    display: flex;
    flex-direction: column;
    padding-top: 40px;

    @include mq($from: tablet) {
      padding-top: 35px;
    }
  }

}

.hope-is-power--centered,
.component-content__content--centered-handler {
  align-self: flex-start;
  padding-left: 0px;
  width: 100%;
  background-color: #ffffff;


  @include mq($from: mobileLandscape) {
    padding-left: 0px;
  }

  @include mq($from: phablet) {
    padding-left: 20px;
    align-self: center;
    width: 100%;
  }

  @include mq($from: tablet) {
    padding-left: 20px;
    width: calc(100% - 40px);
  }

  @include mq($from: desktop) {
    padding-left: 40px;
    max-width: calc(100% - 110px);
    max-width: 1100px;
  }

  @include mq($from: leftCol) {
    width: calc(100% - 80px);
    max-width: 80.625rem;
  }
}

.hope-is-power--heavy-text {
  font-weight: 600;
}

.hope-is-power-hero__marketing-message {
  position: relative;
  z-index: 20;
  display: inline-flex;
  flex-direction: column;
  background-color: #ffe500;
  @include gu-fontset-heading;
  color: gu-colour(neutral-7);
  padding: $gu-v-spacing / 3 0 22px;
  

  h1 {
    font-size: 28px;
    font-weight: 600;
    line-height: 32px;
    max-width: gu-span(3);
    margin: 15px 0 25px 10px !important;
  }

  h2 {
    font-size: 17px;
    font-weight: 400;
    line-height: 21px;
    max-width: gu-span(4);
    margin-left: 10px !important;
  }

  @include mq($from: mobileLandscape) {
    h1 {
      font-size: 28px;
      font-weight: 600;
      line-height: 36px;
      margin-left: 0;
      margin-top: 0 !important;
      max-width: gu-span(5);
    }
  
    h2 {
      font-weight: 400;
      max-width: gu-span(5);
      margin-left: 0;
    }
  }

  @include mq($from: phablet) {
    width: 100%;

    h1 {
      font-size: 32px;
      font-weight: 600;
      line-height: 36px;
      max-width: gu-span(5);
      margin-top: 10px;
      margin-left: 20px !important;
    }

    h2 {
      max-width: gu-span(6);
      font-size: 20px;
      line-height: 24px;
      margin-left: 20px !important;
    }
  }

  @include mq($from: tablet) {
    width: calc(100% - 40px);
  }

  @include mq($from: desktop) {
    max-width: calc(100% - 110px);
    max-width: 1100px;

    h1 {
      font-size: 42px;
      font-weight: 600;
      line-height: 56px;
      max-width: gu-span(8);
      margin-left: 40px !important;
    }
  
    h2 {
      font-size: 24px;
      font-weight: 400;
      line-height: 28px;
      max-width: gu-span(8);
      margin-left: 40px !important;
    }
  }

  @include mq($from: leftCol) {
    width: calc(100% - 80px);
    max-width: 80.625rem;

    h2 {
      max-width: gu-span(9);
    }
  }

  @include mq($from: wide) {
    // width: calc(100% - 80px);
    // max-width: 80.625rem;

    h1 {
      font-size: 50px;
    }
  }

  .hope-is-power__circle {
    position: absolute;
    right: 20px;
    top: 10px;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 90px;
    width: 90px;
    border-radius: 50%;
    background-color: #00b2ff;
    margin-top: 0px;
    margin-left: 5px;

    @include mq($from: mobileLandscape) {
      right: 20px;
      top: 30px;
    }

    @include mq($from: phablet) {
      height: 120px;
      width: 120px;
      right: 30px;
      top: 15px;
    }

    @include mq($from: desktop) {
      right: 40px;
      top: 20px;
    }

    @include mq($from: leftCol) {
      right: 80px;
    }
  }

  .hope-is-power__circle-text {
      font-size: 16px;
      line-height: 22px;
    @include mq($from: phablet) {
      font-size: 22px;
      line-height: 28px;
    }
  }

  .hope-is-power__circle-text--large {
    font-size: 24px;
    line-height: 32px;
    @include mq($from: phablet) {
      font-size: 34px;
      line-height: 40px;
    }
  }
}
/* ... */

